<resources>
    <string name="app_name">Hairly</string>
    <string name="inicio">Inicio</string>
    <string name="centros">Busca tu Centro</string>
    <string name="gestion_citas">Gestionar Citas</string>
    <string name="historial_citas">Historial Citas</string>
    <string name="mapa_centros">Mapa de Centros</string>
    <string name="citas">Tus Citas</string>
    <string name="perfil">Mi Perfil</string>
    <string name="KEY_MAP">AIzaSyBVO9swpINVFkZ6oKLjF73wShofoX99PDU</string>
    <string name="title_activity_login">INICIA SESION</string>
    <string name="create_account">CREAR CUENTA</string>
    <string name="error_password">Error al insertar contraseña</string>
    <string name="error_email">Error al insertar email</string>
    <string name="prueba">prueba</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="error">Inserte sus credenciales de nuevo</string>
    <string name="register">¿No tienes cuenta aún? Registrate.</string>
    <string name="back_login">¿Ya tienes cuenta? Loguéate.</string>
    <string name="TYPE_CLIENT">Cliente</string>
    <string name="TYPE_SHOP">Peluquería</string>
    <string name="ERROR_PASSWORD">Las contraseñas no coinciden</string>
    <string name="ERROR_LONG_PASSWORD">La contraseña debe tener al menos 8 carácteres.</string>
    <string name="ERROR_EMAIL_PATTERN">Introduce un email correcto.</string>
    <string name="ERROR_EMAIL_REGISTERED">Este correo ya está en uso por otra cuenta.</string>
    <string name="logout_user">Cerrar sesión</string>
    <string name="change_photo_profile">Cambiar foto del perfil</string>
    <string name="nick_shop">Nick de tienda</string>
    <string name="nick_client">Nick</string>
    <string name="province">Provincia</string>
    <string name="description">Descripción</string>
    <string name="phone">Teléfono</string>
    <string name="address">Calle y C.P</string>
    <string name="save">Listo</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="no_tiene_ninguna_cita_a_n">No tiene ninguna cita aún</string>
</resources>
