<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context="com.example.jezuz1n.hairly.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_logo_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorBlack"
        android:textSize="70dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:id="@+id/textInputLayout"
        android:layout_below="@+id/tv_logo_register"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/et_email_user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:backgroundTint="@color/colorBackgroundEditText"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textInputLayout2"
            android:layout_toEndOf="@+id/pb_login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout2"
        android:layout_above="@+id/textInputLayout3"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/et_password_user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/colorBackgroundEditText"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_email_user"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout3"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/et_password_user_register_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/colorBackgroundEditText"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_email_user"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/user_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textInputLayout3"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/user_type_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:checked="true"
            android:text="@string/TYPE_CLIENT" />

        <RadioButton
            android:id="@+id/user_type_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/TYPE_SHOP" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register_activity"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/create_account"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/user_type_group"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/et_goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_login"
        android:gravity="center"
        android:textColor="@color/colorBackgroundEditText"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/btn_register_activity"
        android:layout_alignParentStart="true" />

</RelativeLayout>
