<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLightGray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/simpleDraweeView_client"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center_horizontal"
                        fresco:backgroundImage="@color/colorWhite"
                        fresco:placeholderImage="@drawable/profile"
                        fresco:roundedCornerRadius="100dp" />

                    <TextView
                        android:id="@+id/tv_change_photo_client"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/change_photo_profile"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryLight"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ProgressBar
                android:id="@+id/pb_data_client"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryLight"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                android:layout_below="@+id/btn_login_activity"
                android:layout_centerHorizontal="true" />


            <android.support.v7.widget.CardView
                android:id="@+id/cv_data_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/et_email_client_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBackgroundEditText"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorDarkGray" />

                    <EditText
                        android:id="@+id/et_nick_client_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBackgroundEditText"
                        android:drawableLeft="@drawable/ic_name_profile"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/nick_client"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/colorDarkGray" />

                    <EditText
                        android:id="@+id/et_phone_client_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorBackgroundEditText"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:textColorHint="@color/colorDarkGray" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_client_save_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/save"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>